[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://UITheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/images/backgrounds/menu-text.png" type="Texture" id=3]

[node name="MainMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
default_control = NodePath("VBoxContainer/PlayButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 320.0
margin_top = 165.0
margin_right = 704.0
margin_bottom = 435.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 384.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 110 )

[node name="Title" type="TextureRect" parent="VBoxContainer/MarginContainer"]
margin_right = 384.0
margin_bottom = 110.0
texture = ExtResource( 3 )

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_left = 128.0
margin_top = 118.0
margin_right = 256.0
margin_bottom = 150.0
rect_min_size = Vector2( 128, 32 )
focus_neighbour_bottom = NodePath("../HelpButton")
focus_next = NodePath("../HelpButton")
size_flags_horizontal = 4
text = "Play"

[node name="HelpButton" type="Button" parent="VBoxContainer"]
margin_left = 128.0
margin_top = 158.0
margin_right = 256.0
margin_bottom = 190.0
rect_min_size = Vector2( 128, 32 )
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../PlayButton")
size_flags_horizontal = 4
text = "Help"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_left = 128.0
margin_top = 198.0
margin_right = 256.0
margin_bottom = 230.0
rect_min_size = Vector2( 128, 32 )
focus_neighbour_top = NodePath("../HelpButton")
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../HelpButton")
size_flags_horizontal = 4
text = "Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_left = 128.0
margin_top = 238.0
margin_right = 256.0
margin_bottom = 270.0
rect_min_size = Vector2( 128, 32 )
focus_neighbour_top = NodePath("../CreditsButton")
focus_previous = NodePath("../CreditsButton")
size_flags_horizontal = 4
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="VBoxContainer/PlayButton" to="." method="play_pressed"]
[connection signal="pressed" from="VBoxContainer/HelpButton" to="." method="help_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="credits_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="exit_pressed"]
